--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,8 @@
-﻿v1.5.0.29
-- Improve performance in InfoDisplayModifications
-- Switch SlayTask ID set to a HashSet instead of an int[], should run quicker for lookup
-- Switch ItemSets.Fish set to a HashSet, same as above
-- Remove literally completely useless SepulchreWindowTwo tile, which is the same as SepulchreWindowOne but doesn't drop an item (??? what)
-- Stop harpies from spawning in water
-- Stopped the Aurora Stag from being hurt by players
-- Added Aurora Stag bestiary entry
+﻿v1.5.0.30
+- Fix issues with Grouper and a Coconut projectile spawning gores on servers
+- Fixed Auroras using a non-existant local player to check stuff
+- Made Auroras have a 1/3 chance to spawn per night instead of 1/8 if the player (in singleplayer) / any player (in multiplayer) is in a snow biome
+- Replaced Main.projectile iteration with Main.ActiveProjectile
+- Fixed ElectricJellyfishOrbiter from killing dead projectiles
+- Made sure all MyPlayer projectiles are owned by the player, not by everything that runs the method
+- So much superfluous cleanup, let's call it microoptimization
